--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "convert-source-map": "1.3.0",
     "crc": "3.4.4",
     "left-pad": "1.1.3",
-    "lodash": "4.17.4",
+    "lodash": "4.17.11",
     "offset-sourcemap-lines": "1.0.0",
     "through2": "2.0.3",
     "umd": "3.0.1",
-    "ws": "6.1.x"
+    "ws": "6.1.x",
+    "react-proxy": "^1.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
